<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022
  ~ David de Andrés and Juan Carlos Ruiz
  ~ Development of apps for mobile devices
  ~ Universitat Politècnica de València
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/autocomplete" />

        <Button
            android:id="@+id/bSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/spinner" />

        <Button
            android:id="@+id/bList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/listview" />

        <Button
            android:id="@+id/bGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gridview" />

        <Button
            android:id="@+id/bExpandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/expandable" />

        <Button
            android:id="@+id/bRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/recyclerview" />

        <Button
            android:id="@+id/bListAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/listadapter" />

    </LinearLayout>
</ScrollView>